# gammaqc-terminal

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  cf-cleanup.failed.txt  cf-deploy-worker.failed.txt  cf-deploy-worker.no-zone.txt  pyproject.toml
.github/workflows/: publish.yml  sovereign-pr-sentinel.yml  sps-self-tune.yml  test.yml
examples/: holdings.sample.csv
gammaqc_terminal/: __init__.py  auth.py  card.py  cli.py  config.py  hedge.py  scraper.py  shock.py  thesis.py  verify.py  voice.py  watch.py
marketing/launch/: 01-reddit-algotrading.md  02-fintwit-threads.md  03-hackernews-show.md  04-stocktwits.md  README.md
mesh/: README.md
mesh/data/: domains-gammaqc.csv
mesh/docs/: tls-stuck-zones-fix.md
mesh/landing/: index.html  install
mesh/nginx/: canonical-http.conf  canonical.conf  default-redirect.conf  domains.list  gammaqc-mesh-http.conf  gammaqc-mesh.conf  nginx.conf.snippet
mesh/portal/: README.md  build.py  build.sh  index.html  worker.js  wrangler.toml
mesh/portal/.wrangler/cache/: wrangler-account.json
mesh/portal/skill/: SKILL.md
mesh/scripts/: bootstrap.sh  certbot-bulk.sh  certbot-canonical.sh  cloudflare-bulk-redirect.py  cloudflare-cleanup-custom-domains.py  cloudflare-deploy-worker.py  extract-gammaqc-domains.py  launch-verify.sh  namecheap-bulk-dns.py  render-configs.sh  verify-mesh.sh
mesh/workers/: redirect.js
mesh/workers/arcc-cron/: worker.js  wrangler.toml
mesh/workers/email-monster-smtp/: README.md  worker.js  wrangler.toml
mesh/workers/install-analytics/: README.md  summary.js  wrangler.toml
mesh/workers/srf-attestor/: worker.js  wrangler.toml
scripts/: install.sh
tests/: test_config.py  test_hedge.py  test_shock.py  test_verify.py  test_watch_trigger.py
