[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gammaqc-terminal"
version = "0.3.1"
description = "Sovereign quantitative-finance terminal — local SEC scrape, Warren-Voice structural analysis, Portfolio Shock Matrix, Ghost-Watcher daemon. Free at the surface, PQC-sealed at the wall."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "NoirLynX Intelligence" },
]
keywords = ["quant", "trading", "finance", "sec", "options", "alerts", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.5",
    "platformdirs>=4.2",
    # cryptography: required by `gamma verify` for Ed25519 signature
    # verification of Sovereign Review Fabric audit receipts. Keeps
    # crypto provider parity with the backend (which already ships
    # cryptography for Fernet at-rest encryption).
    "cryptography>=42.0",
]

[project.optional-dependencies]
watch = [
    "plyer>=2.1",   # cross-platform desktop notifications (mac/win/linux)
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
gamma = "gammaqc_terminal.cli:app"

[project.urls]
Homepage = "https://gammaqc.com"
Repository = "https://github.com/NoirLynX-Intelligence/gammaqc-terminal"
"Pro Access" = "https://gammaqc.com/pro"

[tool.setuptools]
packages = ["gammaqc_terminal"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
